# ROVnanopi

./: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  README.md  ROVnanopi
inc/: CMakeLists.txt  downThread.h  help.h  init.h  main.h  pthread.h  repeater.h  runnable.h  serial.h  thread.h
inc/main/: main.h
inc/mavlink/ROV/: version.h
inc/mavlink/common/: mavlink_udp.c
inc/projectdebug/: projectdebug.h
inc/repeater/: downThread.h  repeater.h  upThread.h
inc/statemachine/: stateMachine.h
inc/thread/: thread.h  threadControl.h
inc/videostream/: cameraThread.h
src/: CMakeLists.txt  cameraThread.cpp  downThread.cpp  help.cpp  init.cpp  main.cpp  main.cpp.save  pthread.cpp  repeater.cpp  serial.cpp  thread.cpp  threadControl.cpp
src/comm/: CMakeLists.txt
src/init/: CMakeLists.txt  help.cpp  init.cpp
src/mavlink/common/: build
src/mjpg-streamer/: .start.sh.swp  mjpg_streamer
src/mjpg-streamer/plugins/input_uvc/: dynctrl.lo  jpeg_utils.lo  v4l2uvc.lo
src/mjpg-streamer/plugins/output_http/: httpd.lo
src/repeater/: .upThread.cpp.swp  CMakeLists.txt  downThread.cpp  repeater.cpp  upThread.cpp  upThread.cpp.save
src/statemachine/: CMakeLists.txt
src/temp/: cameraThread.cpp  repeater.cpp  serial.cpp  thread.cpp
src/thread/: CMakeLists.txt  threadControl.cpp
src/udp-image-streaming/: .Client.cpp.swp  Client.cpp
src/udp-image-streaming/debug/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server
src/videostream/: CMakeLists.txt  cameraThread.cpp
